# promptukit

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  RELEASING.md  __init__.py  add_trivia.py  build.ps1  cli_helpers.py  extract_trivia.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: add-trivia.md  audit-trivia.md  write-questions.md
.github/workflows/: python-publish.yml
content/exam_metadata/: cven4333_metadata.json  exam_metadata_schema.json
content/question_banks/: crb-water-management.json  example_sections.json
dev/: promptukit_matlab_interop.patch
dev/checks/: test_create_exam_md.py  test_create_pptx.py  test_gui.py  test_new_features.py  test_packaged_datasets.py  test_question_tool.py  test_text_audit.py
dev/requirements/: matlab_interoperability_plan.md  multiple_exam_versions.md  new_question_types.md  template.md
docs/: COLAB.md  DATASETS.md  api.rst  conf.py  index.rst
notebooks/: promptukit_colab_demo.ipynb
paper/: _old.md  ai-use-log.md  outline.md
paper/figures/: core_workflow_diagram.md
promptukit/: __init__.py  __main__.py  add_trivia.py  create_exam.py  extract_trivia.py  gui.py  trivia_tool.py  validate_trivia.py
promptukit/claude_commands/: __init__.py  __main__.py  add-trivia.md  audit-trivia.md
promptukit/data/question_banks/: block-doku-sample.json  block-doku-sample.migrated.json  crb-water-management-sample.json  dev-unaware-challenge.json  example_sections.json  general-water-management-sample.json  jrb_industries_trivia.json  mixed-types-sample.json  pub-quiz-sample.json  question_schema.json
promptukit/exams/: __init__.py  create_exam.py  create_exam_md.py  create_pptx.py  create_pub_quiz.py
promptukit/parasolpy_api/: example.py
promptukit/questions/: __init__.py  add_question.py  extract_question.py  question_bank.py  question_models.py  text_audit.py  validate_question.py
promptukit/utils/: __init__.py  cli_helpers.py  html_md_convert.py  json_tools.py
question_banks/: 5393.json  block-doku-questions.json  general-water-management.json  question_schema.json
scripts/: add_trivia.py  build.ps1  check_nb_syntax.py  demo_question_usage.py  extract_trivia.py  pull-all.bat  release.py  release.sh  sync_claude_commands.py  test_html_md_convert.py  validate_banks.py  validate_trivia.py
tests/: test_trivia_tool.py
