[tool.poetry]
name = "promptukit"
version = "0.1.0"
description = "Utilities for building question banks and generating exam documents."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [ { include = "promptukit" } ]

[tool.poetry.dependencies]
python = "^3.10"
reportlab = "^4.4.10"

[tool.poetry.scripts]
add-question = "promptukit.questions.add_question:main"
extract-question = "promptukit.questions.extract_question:main"
validate-question = "promptukit.questions.validate_question:main"
question-bank = "promptukit.questions.question_bank:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["dev/checks"]
