[tool.poetry]
name = "promptukit"
version = "0.2.2"
description = "Utilities for building question banks and generating exam documents."
authors = ["Joseph Kasprzyk <jkasprzyk@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jrkasprzyk/promptukit"
repository = "https://github.com/jrkasprzyk/promptukit"
keywords = ["questions", "exams", "education", "pdf", "question-bank"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
packages = [ { include = "promptukit" } ]

# Include packaged data files so example datasets are available from an
# installed distribution. This pattern includes the `promptukit/data/**`
# directory in source distributions and wheels.
include = [
    { path = "promptukit/data/**", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
reportlab = "^4.4.10"
twine = "^6.2.0"
build = "^1.4.3"
nicegui = "^3.10.0"
parasolpy = "^0.1.1"

[tool.poetry.scripts]
add-question = "promptukit.questions.add_question:main"
extract-question = "promptukit.questions.extract_question:main"
validate-question = "promptukit.questions.validate_question:main"
question-bank = "promptukit.questions.question_bank:main"
promptukit-gui = "promptukit.gui:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["dev/checks"]
